[package]
name = "fiducia-memory"
version = "0.1.0"
edition = "2021"
description = "Durable, tenant-scoped claims ledger and hybrid memory recall for Fiducia agents"
license = "MIT"

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
fiducia-telemetry = { git = "https://github.com/fiducia-cloud/fiducia-telemetry.rs", tag = "v0.2.1" }
sea-orm = { version = "1.1", default-features = false, features = ["sqlx-postgres", "runtime-tokio-rustls", "with-uuid", "with-chrono", "with-json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "request-id", "timeout", "limit"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
